# training

./: .gitignore  Makefile  README.md
elm/src/: Login.elm  Main.elm  NewMain.elm  Types.elm  Utility.elm
elm/src/Pages/: DailyList.elm  Login.elm  PlanList.elm
postgresql/: schema.sql
rustyserver/: .gitignore  Cargo.toml  Rocket.toml
rustyserver/pages/app/: index.html  main.js  style.css
rustyserver/pages/login/: index.html  login.js  style.css
rustyserver/postgresql/: oldqueries.sql  schema.sql
rustyserver/postgresql/queries/: check_session.sql  check_user.sql  get_daily.sql  insert_execution.sql  insert_execution_row.sql  insert_plan.sql  new_session.sql
rustyserver/src/: exercises.rs  main.rs
rustyserver/src/auth/: mod.rs  queries.rs  routes.rs  types.rs
rustyserver/static/: elm.js  index.html  style.css
svelte_frontend/: package-lock.json  package.json  svelte.config.js
svelte_frontend/src/: app.html
svelte_frontend/src/lib/: ExerciseCard.svelte  ExerciseDetail.svelte  index.js
svelte_frontend/src/routes/: +page.js
svelte_frontend/src/routes/app/: +layout.server.js  +page.js
svelte_frontend/src/routes/app/add/: +page.svelte
svelte_frontend/src/routes/app/detail/: +page.svelte
svelte_frontend/src/routes/app/history/: +page.svelte
svelte_frontend/src/routes/app/list/: +page.js  +page.svelte
svelte_frontend/src/routes/app/manage/: +page.svelte
svelte_frontend/src/routes/login/: +page.svelte
