[package]
name = "training"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.35"
rocket = { version = "0.5.0", features = ["json"] }
rocket_db_pools = { version = "0.1.0", features = ["sqlx_postgres", "sqlx_mysql"] }
sqlx = "0.7.4"
uuid = { version = "1.8.0", features = ["v4"] }
